--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ monitor_filters = esp32_exception_decoder
 [env:esp32]
 board = esp32doit-devkit-v1
 board_build.mcu = esp32
-upload_port = COM6
+; upload_port = COM6
