--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,11 @@
 [platformio]
-default_envs = esp32
+default_envs = esp8266
 [env]
-platform = espressif32
 framework = arduino
 monitor_speed = 115200
 
 [env:esp32s3]
+platform = espressif32
 board = adafruit_feather_esp32s3
 ; build_flags = 
 ;     -DBOARD_HAS_PSRAM
@@ -15,6 +15,12 @@ monitor_filters = esp32_exception_decoder
 ; monitor_port = COM4
 
 [env:esp32]
+platform = espressif32
 board = esp32doit-devkit-v1
 board_build.mcu = esp32
 ; upload_port = COM6
+
+[env:esp8266]
+platform = espressif8266
+board = esp01_1m
+board_build.mcu = esp8266
