--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,16 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
-default_envs = esp8266
+default_envs = esp32
+
 [env]
 framework = arduino
 monitor_speed = 115200
@@ -7,20 +18,18 @@ monitor_speed = 115200
 [env:esp32s3]
 platform = espressif32
 board = adafruit_feather_esp32s3
-; build_flags = 
-;     -DBOARD_HAS_PSRAM
-;     -mfix-esp32-psram-cache-issue
 board_build.mcu = esp32s3
 monitor_filters = esp32_exception_decoder
-; monitor_port = COM4
+lib_deps = armmbed/mbedtls@^2.23.0
 
 [env:esp32]
 platform = espressif32
 board = esp32doit-devkit-v1
 board_build.mcu = esp32
-; upload_port = COM6
+lib_deps = armmbed/mbedtls@^2.23.0
 
 [env:esp8266]
 platform = espressif8266
 board = esp01_1m
 board_build.mcu = esp8266
+lib_deps = armmbed/mbedtls@^2.23.0
